<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Todo_Fragment">

    <ListView
        android:id="@+id/lvItems"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_above="@+id/btnAddItem"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="178dp" />

    <EditText
        android:id="@+id/etNewItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lvItems"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-178dp"
        android:hint="Enter a new item" />

    <EditText
        android:id="@+id/in_date"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginBottom="162dp" />

    <Button
        android:id="@+id/btn_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/in_date"
        android:layout_toEndOf="@+id/in_date"
        android:layout_toRightOf="@+id/in_date"
        android:text="SELECT DATE" />

    <EditText
        android:id="@+id/in_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btn_time"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:layout_toStartOf="@+id/btn_time"
        android:layout_toLeftOf="@+id/btn_time" />

    <Button
        android:id="@+id/btn_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_date"
        android:layout_alignStart="@+id/btn_date"
        android:layout_alignLeft="@+id/btn_date"
        android:text="SELECT TIME" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="35dp"
        android:text="Add Item" />

</RelativeLayout>