<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_steps"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/steps" />

    <item
        android:id="@+id/nav_calories"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/calories" />

    <item
        android:id="@+id/nav_todo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/todo" />

</menu>
