...
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/timeCompleteID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/time_string"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

...
